# py-power-systems-frequency-estimator-open-bench

./: .gitignore  .pre-commit-config.yaml  .ruffignore  Dockerfile  Makefile  README.md  environment.yml  mypy.ini  paper.bib  paper.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml
.github/ PULL_REQUEST_TEMPLATE/: estimator.md  scenario.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  estimator_proposal.yml  feature_request.yml  proposal_benchmark.yml  proposal_estimator.yml  proposal_metric.yml  proposal_scenario.yml  scenario_proposal.yml
.github/PULL_REQUEST_TEMPLATE/: README.md  benchmark.md  default.md  deps.md  docs.md  estimator.md  hotfix.md  metric.md
.github/workflows/: ci.yml
_____TEMP____/scripts/: run.sh
data/results/benchmark_20251015_115342/: summary.json
data/results/benchmark_20251015_115342/jsons/: s0_step.json
docker/: Dockerfile  entrypoint.sh
docs/: index.md
estimators/: base.py
estimators/basic/: ipdft.py  zcd.py
estimators/basic/zcd/: __init__.py  core.py  distributed.py  multi.py  single.py
evaluation/: metrics.py  plotting.py
notebooks/: README.md
pipelines/: run_benchmark.py
scenarios/s1_synthetic/: frequency_ramp_step.py  frequency_step.py  make_clean.py
scripts/: bootstrap_github.sh  clean.sh  env.sh  inspect.sh  install.sh
scripts/common/: env.sh  lib.sh
scripts/github/: ___al__bootstrap_github.sh  bootstrap copy.sh  bootstrap.sh  bootstrap_github.sh  config.env  lib.sh
scripts/github/data/: epics.json  issues.json  labels.json  milestones.json
scripts/github/steps/: create_epics.sh  create_issues_core.sh  create_issues_from_file.sh  create_issues_generated.sh  create_releases.sh  ensure_labels.sh  ensure_milestones.sh
scripts/pipelines/: clean.sh  docs.sh  install.sh  lint.sh  package.sh  run.sh  test.sh  typecheck.sh
scripts/scafolding/: bootstrap_scafolding.sh
tests/: test_ipdft.py
utils/: __init__.py
utils/pmu/: __init__.py  pmu_input.py  pmu_output.py
